# remove-ignore

./: LICENSE  README.md  main.py  pyproject.toml
src/remign/: actions.py  constants.py  main.py  types_.py  utils.py
src/rm_ign/: main.py  types_.py  utils.py
