[project]
name = "remign"
description = "Delete each path from git repository that matches patterns in ignore files."
version = "1.0.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Muhammad Altaaf", email = "taafuuu@gmail.com"}
]
dependencies = [
  "gitignore_parser"
]


[project.scripts]
remign = "remign.main:main"
